Fix navbar dropdown menu issue on mobile. Attempt to enlarge modal images on mobile

--- a/anyons/css/modal_img.css
+++ b/anyons/css/modal_img.css
@@ -136,7 +136,8 @@
 
 /* 100% Image Width on Smaller Screens - TEST THIS*/
 @media only screen and (max-width: 700px){
-    .modal-content {
+    .modal-content, #caption2, #caption3 {
         width: 100%;
+        margin: 0px;
     }
 }
